<resources>
    <string name="app_name">The Project</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login_message">Please login</string>
    <string name="patient_register_message">Patient registration</string>
    <string name="doctor_register_message">Doctor registration</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="disease">Disease</string>
    <string name="click_to_register">Click to register</string>
    <string name="wrong_email_or_password">Wrong email or password</string>
    <string name="clear_data">Clear data</string>
    <string name="logout">Log out</string>


    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_as_doctor">Register as a doctor</string>
    <string name="register_as_patient">Register as a patient</string>
    <string name="speciality">Specialty</string>
    <string name="btn_scan">Scan</string>
    <string name="text_pair">Pair</string>
    <string name="text_bluetooth_off">Disable</string>
    <string name="text_enable">Enable</string>
    <string name="text_view_paired">Paired</string>
    <string name="text_scan_devices">Scan devices</string>
    <string name="text_list_devices">Devices</string>
</resources>
